[tool.poetry]
name = "tkview"
version = "0.1.0"
description = "Interface com Tkinter, componentes e janelas prontas para utilização de diversas finalizades."
authors = ["matheuslpolidoro <mattpolidoro4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
pytest = "^7.1.2"
mkdocs = "^1.3.1"
prospector = "^1.7.7"
pip-audit = "^2.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
